# src/openapi/api.ts
@@ -4,19 +4,6 @@
  */
 
 export type paths = {
-  "/lightningInvoiceGotSettled": {
-    post: {
-      responses: {
-        /** OK */
-        200: unknown;
-      };
-      requestBody: {
-        content: {
-          "application/json": components["schemas"]["LightningInvoiceSettledNotification"];
-        };
-      };
-    };
-  };
   "/majorTomToGroundControl": {
     post: {
       responses: {
@@ -27,7 +14,6 @@ export type paths = {
         content: {
           "application/json": {
             addresses?: string[];
-            hashes?: string[];
             txids?: string[];
             token?: string;
             os?: string;
@@ -46,7 +32,6 @@ export type paths = {
         content: {
           "application/json": {
             addresses?: string[];
-            hashes?: string[];
             txids?: string[];
             token?: string;
             os?: string;
@@ -113,7 +98,6 @@ export type paths = {
       requestBody: {
         content: {
           "application/json": (
-            | components["schemas"]["PushNotificationLightningInvoicePaid"]
             | components["schemas"]["PushNotificationOnchainAddressGotPaid"]
             | components["schemas"]["PushNotificationOnchainAddressGotUnconfirmedTransaction"]
             | components["schemas"]["PushNotificationTxidGotConfirmed"]
@@ -146,22 +130,10 @@ export type components = {
       lang?: string;
       app_version?: string;
     } & { [key: string]: unknown };
-    /** @description object thats posted to GroundControl to notify end-user that his specific invoice was paid by someone */
-    LightningInvoiceSettledNotification: {
-      /** @description text that was embedded in invoice paid */
-      memo?: string;
-      /** @description hex string preimage */
-      preimage?: string;
-      /** @description hex string preimage hash */
-      hash?: string;
-      /** @description exactly how much satoshis was paid to make this invoice settked (>= invoice amount) */
-      amt_paid_sat?: number;
-    } & { [key: string]: unknown };
     /** @description payload for push notification delivered to phone */
     PushNotificationBase: {
       /**
        * @description type:
-       *  * `1` - Your lightning invoice was paid
        *  * `2` - New transaction to one of your addresses
        *  * `3` - New unconfirmed transaction to one of your addresses
        *  * `4` - Transaction confirmed
@@ -169,35 +141,22 @@ export type components = {
        *
        * @enum {integer}
        */
-      type: 1 | 2 | 3 | 4 | 5;
+      type: 2 | 3 | 4 | 5;
       token: string;
       /** @enum {string} */
       os: "android" | "ios";
       badge?: number;
       level: components["schemas"]["NotificationLevel"];
     } & { [key: string]: unknown };
-    PushNotificationLightningInvoicePaid: components["schemas"]["PushNotificationBase"] &
-      ({
-        /** @enum {integer} */
-        type?: 1;
-        /** @enum {string} */
-        level?: "transactions";
-        /** @description amount of satoshis */
-        sat: number;
-        /** @description hash of specific ln invoice preimage */
-        hash: string;
-        /** @description text attached to bolt11 */
-        memo: string;
-      } & { [key: string]: unknown }) & { [key: string]: unknown };
     PushNotificationOnchainAddressGotPaid: components["schemas"]["PushNotificationBase"] &
       ({
         /** @enum {integer} */
         type?: 2;
         /** @enum {string} */
         level?: "transactions";
-        /** @description amount of satoshis */
+        /** @description amount in the smallest XNA unit (1 XNA = 100,000,000 sat) */
         sat: number;
-        /** @description user's onchain address that has incoming transaction */
+        /** @description user's Neurai on-chain address that has an incoming transaction */
         address: string;
         /** @description txid of the transaction where this address is one of the outputs */
         txid: string;
@@ -208,9 +167,9 @@ export type components = {
         type?: 3;
         /** @enum {string} */
         level?: "transactions";
-        /** @description amount of satoshis */
+        /** @description amount in the smallest XNA unit (1 XNA = 100,000,000 sat) */
         sat: number;
-        /** @description user's onchain address that has incoming transaction */
+        /** @description user's Neurai on-chain address that has an incoming transaction */
         address: string;
         /** @description txid of the transaction where this address is one of the outputs */
         txid: string;
@@ -228,7 +187,7 @@ export type components = {
       ({
         /** @enum {integer} */
         type?: 5;
-        /** @description custom text thats displayed on push notification buble */
+        /** @description custom text displayed on the push notification bubble */
         text: string;
       } & { [key: string]: unknown }) & { [key: string]: unknown };
   };
